concept for plugin preset interface

--- a/html/index.html
+++ b/html/index.html
@@ -270,7 +270,7 @@ $('document').ready(function() {
     <div id="wrapper" class="mod-init-hidden">
 
         <!-- MANAGE PRESETS -->
-        <div id="pedalboard-presets" class="save-popup">
+        <div id="pedalboard-presets" class="save-popup mod-hidden">
             <div class="mod-box" style="width: 400px">
                 <h1 class="pull-left">Manage presets</h1><span class="close">&times;</span>
                 <form class="bottom">
