adjustments regarding presets

--- a/html/index.html
+++ b/html/index.html
@@ -281,9 +281,9 @@ $('document').ready(function() {
                         </select>
                     </div>
                     <div class="controls actions">                      
-                      <button class="btn btn-success">Load</button>
+                      <button class="btn btn-success">Assign selected</button>
+                      <button class="btn btn-warning">Assign list</button>
                       <button class="btn btn-default">Rename</button>
-                      <button class="btn btn-warning">Assign</button>
                       <button class="btn btn-danger">Delete</button>
                     </div>
                 </form>
@@ -479,8 +479,7 @@ $('document').ready(function() {
                 <!-- <div class="favorite"></div> -->
                 <div class="actions">
                     <button class="js-preset menu-trigger">Presets</button>
-                      <ul class="drop-menu">
-                        <li>Assign preset list</li>
+                      <ul class="drop-menu">                        
                         <li>Save</li>
                         <li>Save as</li>
                         <li class="sub-menu-trigger">Load <span class="pull-right">&rsaquo;</span>
@@ -495,7 +494,7 @@ $('document').ready(function() {
                               <li>preset</li>
                             </ul>
                         </li>
-                        <li class="js-pedalboard-presets" >Manage</li>
+                        <li class="js-pedalboard-presets" >Manage / assign</li>
                       </ul>
                     <button class="js-reset">New Pedalboard</button>
                     <button class="js-save">Save</button>
