--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -35,8 +35,9 @@
                     <div mod-role="enumeration-option" mod-port-value="preset">preset</div>
                 </div>
                 <button class="btn btn-xs btn-primary">Save</button>
+                <button class="btn btn-xs btn-primary">Save as</button>                
+                <button class="btn btn-xs btn-primary">Assign selected</button>
                 <button class="btn btn-xs btn-primary">Rename</button>
-                <button class="btn btn-xs btn-primary">Assign</button>
                 <button class="btn btn-xs btn-primary">Delete</button>
                 <div class="mod-address" mod-role="input-control-address" mod-port-symbol="{{symbol}}"></div>
             </div>
