stylizing a proper share button

--- a/html/index.html
+++ b/html/index.html
@@ -130,7 +130,7 @@ $('document').ready(function() {
       socialWindow: $('#mod-social-network'),
       loginWindow: $('#login-window'),
       registrationWindow: $('#registration-window'),
-      shareButton: $('#pedalboard-sharing .button'),
+      shareButton: $('#pedalboard-info .js-share'),
       shareWindow: $('#share-window'),
       userName: $('#user-name'),
       userAvatar: $('#user-avatar'),
@@ -502,14 +502,13 @@ $('document').ready(function() {
                     <button class="js-reset">New Pedalboard</button>
                     <button class="js-save">Save</button>
                     <button class="js-save-as">Save as</button>
+                    <button class="js-share">Share</button>
                 </div>
             </div>
             <!-- END PEDALBOARD-SETTINGS -->
 
             <!-- PEDALBOARD-SHARING -->
-            <div id="pedalboard-sharing">
-                <div class="button"></div>
-            </div>
+            
             <!-- END PEDALBOARD-SHARING -->
 
         </header>
