Comment out markus preset widget

--- a/html/index.html
+++ b/html/index.html
@@ -222,7 +222,7 @@ $('document').ready(function() {
 <!--<script type="text/javascript" src="js/upgrade.js?v={{version}}"></script>-->
 <!--<script type="text/javascript" src="js/xrun.js?v={{version}}"></script>-->
 <script type="text/javascript" src="js/host.js?v={{version}}"></script>
-<script type="text/javascript" src="js/presets.js?v={{version}}"></script>
+<!--<script type="text/javascript" src="js/presets.js?v={{version}}"></script>-->
 <script type="text/javascript" src="js/nprogress.js?v={{version}}"></script>
 
 <style type="text/css">
