--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -21,7 +21,7 @@
     <!-- /OLD STYLE -->
     {{/newPresetStyle}}
     <div class="mod-controls clearfix">
-        <div class="mod-control-group clearfix">            
+        <div class="mod-control-group clearfix">
             <div class="mod-switch bypass">
                 <span class="mod-switch-title">ON/OFF</span>
                 <div class="mod-light on" mod-role="bypass-light"></div>
@@ -38,16 +38,16 @@
             <div class="mod-enumerated mod-presets ">
                 <span class="mod-enumerated-title">
                     Preset list&emsp;&emsp;
-                    <span> 
+                    <span>
                         <input class="radio-preset" type="radio" name="preset_type" id="preset_factory">
-                        <label for="preset_factory">Factory</label> 
+                        <label for="preset_factory">Factory</label>
                     </span>&emsp;
                     <span>
-                        <input selected="selected" class="radio-preset" checked="checked" type="radio" name="preset_type" id="preset_user">
-                        <label for="preset_factory">user</label>
+                        <input class="radio-preset" type="radio" name="preset_type" id="preset_user" checked="checked" selected="selected">
+                        <label for="preset_user">user</label>
                     </span>
                 </span>
-                <div class="mod-enumerated-list"  mod-widget="custom-select">                    
+                <div class="mod-enumerated-list" mod-widget="custom-select">
                     <div mod-role="enumeration-option" mod-port-value="preset">preset</div>
                     <div mod-role="enumeration-option" mod-port-value="preset">preset</div>
                     <div mod-role="enumeration-option" mod-port-value="preset">preset</div>
@@ -59,7 +59,7 @@
                 </div>
                 <div>
                     <button class="btn btn-xs btn-primary">Save</button>
-                    <button class="btn btn-xs btn-primary">Save as</button>                                    
+                    <button class="btn btn-xs btn-primary">Save as</button>
                     <button class="btn btn-xs btn-primary">Rename</button>
                     <button class="btn btn-xs btn-primary">Delete</button>
                     <button class="btn btn-xs btn-primary">Assign selected</button>
