Don't use ids on preset widget

--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -34,12 +34,11 @@
                 <span class="mod-enumerated-title">
                     Preset list&emsp;&emsp;
                     <span>
-                        <input class="radio-preset" type="radio" name="preset_type" id="preset_factory">
-                        <label for="preset_factory">Factory</label>
-                    </span>&emsp;
+                        <label><input type="radio" name="preset_type" class="radio-preset radio-preset-factory"> Factory</label>
+                    </span>
+                    &emsp;
                     <span>
-                        <input class="radio-preset" type="radio" name="preset_type" id="preset_user">
-                        <label for="preset_user">user</label>
+                        <label><input type="radio" name="preset_type" class="radio-preset radio-preset-user"> User</label>
                     </span>
                 </span>
                 <div class="mod-enumerated-list" mod-widget="custom-select">
