make something appear when clicking to address all presets

--- a/html/resources/settings.html
+++ b/html/resources/settings.html
@@ -54,7 +54,7 @@
                     <button class="btn btn-xs btn-primary">Assign selected</button>
                 </div>
                 <footer class="assign-all">
-                    <button class="btn btn-xs btn-primary" mod-role="input-control-address" mod-port-symbol="{{symbol}}">Assign all</button>
+                    <button class="btn btn-xs btn-primary" mod-role="presets-address">Assign all</button>
                 </footer>
             </div>
             <!-- END PRESETS -->
