fine tuning pedalboard presets dialog/menu

--- a/html/index.html
+++ b/html/index.html
@@ -280,11 +280,11 @@ $('document').ready(function() {
                           <i class=""></i>
                         </select>
                     </div>
-                    <div class="controls actions">
-                      <button class="btn btn-success">Assign selected</button>
-                      <button class="btn btn-warning">Assign list</button>
+                    <div class="controls actions">                      
                       <button class="btn btn-default">Rename</button>
                       <button class="btn btn-danger">Delete</button>
+                      <button class="btn btn-success">Assign selected&nbsp;</button>
+                      <button class="btn btn-warning">Assign all&nbsp;</button>
                     </div>
                 </form>
             </div>
@@ -515,7 +515,7 @@ $('document').ready(function() {
                               <li>preset</li>
                             </ul>
                         </li>
-                        <li class="js-pedalboard-presets" >Manage / assign</li>
+                        <li class="js-pedalboard-presets" >Manage / Assign</li>
                       </ul>
                     <button class="js-reset">New Pedalboard</button>
                     <button class="js-save">Save</button>
