Add "form-control" class to save dialog input, better on firefox

--- a/html/index.html
+++ b/html/index.html
@@ -280,7 +280,7 @@ $('document').ready(function() {
                           <i class=""></i>
                         </select>
                     </div>
-                    <div class="controls actions">                      
+                    <div class="controls actions">
                       <button class="btn btn-default">Rename</button>
                       <button class="btn btn-danger">Delete</button>
                       <button class="btn btn-success">Assign selected&nbsp;</button>
@@ -315,7 +315,7 @@ $('document').ready(function() {
                     <form class="bottom">
                         <div class="controls clearfix">
                             <label>Name</label>
-                            <input type="text"/>
+                            <input type="text" class="form-control"/>
                         </div>
                         <div class="controls actions">
                             <button class="js-cancel-saving btn btn-danger">Cancel</button>
@@ -333,7 +333,7 @@ $('document').ready(function() {
                     <form class="bottom">
                         <div class="controls clearfix">
                             <label>Name</label>
-                            <input type="text"/>
+                            <input type="text" class="form-control"/>
                         </div>
                         <div class="controls actions">
                             <button class="js-cancel-saving btn btn-danger">Cancel</button>
