adding icons to share buttons

--- a/html/index.html
+++ b/html/index.html
@@ -477,12 +477,12 @@ $('document').ready(function() {
                         </div>
                         <div class="textleft mod-hidden" id="share-window-links">
                             <small>&nbsp;</small>
-                            <p>Uploaded completed!</p>
-                            <button class="btn btn-danger btn-large btn-block" id="record-again">
-                                <i class="icon-white icon-repeat"></i> Share to Facebook
+                            <h3>Uploaded completed!</h3>
+                            <button class="btn btn-danger btn-large btn-block fb" >
+                                Share to Facebook <img src="../img/icons/36/share-fb.png" />
                             </button>
-                            <button class="btn btn-inverse btn-large btn-block" id="record-delete">
-                                <i class="icon-white icon-remove"></i> Share to Twitter
+                            <button class="btn btn-inverse btn-large btn-block tw" >
+                                Share to Twitter <img src="../img/icons/36/share-tw.png" />
                             </button>
                             <p id="share-window-url"></p>
                         </div>
