added 'name' and 'email' fields on share window

--- a/html/index.html
+++ b/html/index.html
@@ -439,7 +439,13 @@ $('document').ready(function() {
                 <h1>SHARE</h1>                
                 <form>
                     <div class="form-group" id="share-window-form">
-                        <label for="pedalboard-share-title"><input type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
+                      <div class="col-sm-6 unpadded-l">
+                        <label for="pedalboard-share-name">NAME<br /><input type="text" class="form-control" id="pedalboard-share-name"  /></label>
+                      </div>
+                      <div class="col-sm-6 unpadded">
+                        <label for="pedalboard-share-email">E-MAIL<br /><input type="text" class="form-control" id="pedalboard-share-email" /></label>
+                      </div>
+                        <label for="pedalboard-share-title">PEDALBOARD NAME<br /><input type="text" class="form-control" id="pedalboard-share-title"  placeholder="How will you call this pedalboard?"/></label>
                         <label for="pedalboard-share-comment"><textarea rows="4" id="pedalboard-share-comment" class="form-control" placeholder="What's special about this pedalboard?"></textarea></label>
                     </div>
                     <div id="share-window-wrapper">
@@ -448,7 +454,7 @@ $('document').ready(function() {
                             <span class="btn btn-danger" id="record-rec">&nbsp;&#9654;</span>
                             <p><small>(optional)</small><p>
                         </div>
-                        <div class="controls actions mod-hidden" id="record-step-2">
+                        <div class="controls mod-hidden" id="record-step-2">
                           <div class="textcenter">
                             <h2>Recording starts in</h2>
                             <span class="btn btn-danger" id="record-countdown">3</span>
